# mergepy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mergepy/: __init__.py  merge.tcss
