[build-system]
requires = ["setuptools", "argcomplete", "textual", "Zenity", 'PySide6']
build-backend = "setuptools.build_meta"
[project]
name = "mergepy"
version = "1.1"
authors = [
  { name="Excited Bore", email="brunt-curry-wobble@duck.com" },
]

keywords = ["mergepy", "textual", "setuptools", "development"]
description = "A cli-based python tool designed to merge 2 files together interactively (using python's difflib)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "argcomplete >= 3.6.3", "textual >= 3.0.20", "PySide6 >= 6.11.1", "Zenity >= 2.0.0" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mergepy = "mergepy:main"

[project.urls]
"Homepage" = "https://github.com/excited-bore/mergepy"
"Bug Tracker" = "https://github.com/excited-bore/mergepy/issues"
